--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,16 @@ body {
     background-color: #fb565a;
 }
 
+.site-menu-link-active a::before {
+    content: "";
+    width: 74px;
+    height: 2px;
+    display: block;
+    position: absolute;
+    top: 104px;
+    background-color: #fb565a;
+}
+
 .user-menu-cart {
     position: relative;
 }
@@ -256,7 +266,11 @@ body {
 }
 
 .sorting a:hover {
-    color: #000;
+    color: #000000;
+}
+
+.sorting .sorting-active {
+    color: #000000;
 }
 
 .range-price {
@@ -462,6 +476,26 @@ body {
     z-index: 1;
 }
 
+.catalog-item-1 {
+    margin: 95px 0 75px 40px;
+    position: relative;
+    z-index: 1;
+}
+
+.catalog-item-1::before {
+    content: "";
+    position: absolute;
+    top: -39px;
+    left: 0;
+    display: block;
+    background-image: url("../img/browser-checked.svg");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    z-index: 2;
+    width: 360px;
+    height: 41px;
+}
+
 .catalog-item::before {
     content: "";
     position: absolute;
@@ -474,6 +508,84 @@ body {
     z-index: 2;
     width: 360px;
     height: 41px;
+}
+
+.site-promo-wrapper {
+    width: 200px;
+    text-align: center;
+}
+
+.catalog-item-title {
+    text-transform: uppercase;
+}
+
+.catalog-item-1:hover::after {
+    content: "";
+    position: absolute;
+    padding: 10px;
+    top: 345px;
+    left: 0px;
+    right: 0px;
+    bottom: 0;
+    z-index: 3;
+    display: block;
+    background-color: #eeeeee;
+}
+
+.catalog-item:hover::after {
+    content: "";
+    position: absolute;
+    padding: 10px;
+    top: 345px;
+    left: 0px;
+    right: 0px;
+    bottom: 0;
+    z-index: 3;
+    display: block;
+    background-color: #eeeeee;
+}
+
+.button {
+    background-color: #fb565a;
+    width: 120px;
+}
+
+.site-promo-wrapper {
+    visibility: hidden;
+    margin: 0 auto;
+    margin-bottom: -150px;
+}
+
+.catalog-item .button,
+.catalog-item-1 .button {
+    margin: 0 auto;
+    visibility: hidden;
+    margin-top: 6px;
+    padding: 11px 40px;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+.catalog-item a,
+.catalog-item-1 a {
+    position: relative;
+    display: block;
+}
+
+
+.catalog-item:hover a,
+.catalog-item-1:hover a {
+    z-index: 2;
+}
+
+.catalog-item:hover .button,
+.catalog-item-1:hover .button,
+.catalog-item:hover .site-promo-wrapper,
+.catalog-item-1:hover .site-promo-wrapper
+{
+    visibility: visible;
+    z-index: 3000;
 }
 
 .product-content {
@@ -678,8 +790,20 @@ body {
     background-color: #eeeeee;
 }
 
-.our-clients li {
+.our-clients .clients {
     margin-right: 95px;
+    position: relative;
+}
+
+.clients::before {
+    content: "";
+    display: block;
+    position: absolute;
+    right: -45px;
+    top: 20px;
+    width: 2px;
+    height: 50px;
+    background-color: #eeeeee;
 }
 
 .map {
