--- a/css/style.css
+++ b/css/style.css
@@ -547,13 +547,15 @@ body {
 
 .button {
     background-color: #fb565a;
-    width: 120px;
 }
 
 .site-promo-wrapper {
     visibility: hidden;
     margin: 0 auto;
     margin-bottom: -150px;
+    position: absolute;
+    bottom: 190px;
+    left: 80px;
 }
 
 .catalog-item .button,
@@ -947,8 +949,234 @@ body {
     margin-bottom: 10px;
 }
 
+.modal-login {
+    width: 960px;
+    display: none;
+    position: fixed;
+    top: 100px;
+    left: 0;
+    right: 0;
+    z-index: 100;
+    margin: 0 auto;
+    background-color: #ffffff;
+    padding: 18px 23px;
+    -webkit-box-shadow: 0 10px 56px rgba(0,0,0,.7);
+    box-shadow: 0 10px 56px rgba(0,0,0,.7);
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    text-align: left;
+}
 
+.modal-login p {
+    font-size: 45px;
+    font-family: 'Roboto', 'Arial', sans-serif;
+    font-weight: 500;
+    margin-left: 80px;
+}
 
+.form-group {
+    position: relative;
+}
+
+.form-label {
+    position: absolute;
+    color: #000000;
+    font-size: 16px;
+    line-height: 24px;
+    top: -25px;
+    left: 0px;
+}
+
+.form-label-inside {
+    position: absolute;
+    color: #999999;
+    font-size: 16px;
+    line-height: 24px;
+    top: 13px;
+    left: 15px;
+}
+
+.form-input-1,
+.form-input-2 {
+    width: 360px;
+    min-height: 50px;
+    margin-bottom: 50px;
+    margin-right: 40px;
+    outline: none;
+    border-radius: 6px;
+    border: 2px solid #d7dcde;
+}
+
+textarea {
+    width: 762px;
+    min-height: 120px;
+    outline: none;
+    border-radius: 6px;
+    border: 2px solid #d7dcde;
+    margin-bottom: 50px;
+}
+
+.modal-form {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 80px;
+}
+
+.form-input {
+    justify-content: flex-start;
+}
+
+.modal-form button {
+    color: #fff;
+    text-transform: uppercase;
+    width: 260px;
+    min-height: 50px;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    margin-bottom: 50px;
+}
+
+.close-button {
+    position: absolute;
+    right: 80px;
+    top: 95px;
+    display: block;
+    width: 24px;
+    height: 24px;
+    font-size: 0;
+    border: none;
+    cursor: pointer;
+    background-color: transparent;
+}
+
+.close-button::before,
+.close-button::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    width: 24px;
+    height: 2px;
+    background: rgba(255, 0, 0, 0.3);
+    top: 0;
+}
+
+.close-button::before {
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+.close-button::after {
+    -webkit-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+}
+
+@-webkit-keyframes shake {
+    0%,
+    100% {
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+    }
+
+    10%,
+    30%,
+    50%,
+    70%,
+    90% {
+        -webkit-transform: translateX(-10px);
+        transform: translateX(-10px);
+    }
+
+    20%,
+    40%,
+    60%,
+    80% {
+        -webkit-transform: translateX(10px);
+        transform: translateX(10px);
+    }
+}
+
+@keyframes shake {
+    0%,
+    100% {
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+    }
+
+    10%,
+    30%,
+    50%,
+    70%,
+    90% {
+        -webkit-transform: translateX(-10px);
+        transform: translateX(-10px);
+    }
+
+    20%,
+    40%,
+    60%,
+    80% {
+        -webkit-transform: translateX(10px);
+        transform: translateX(10px);
+    }
+}
+
+@-webkit-keyframes bounce {
+    0% {
+        -webkit-transform: translateY(-2000px);
+        transform: translateY(-2000px);
+    }
+
+    70% {
+        -webkit-transform: translateY(30px);
+        transform: translateY(30px);
+    }
+
+    90% {
+        -webkit-transform: translateY(-10px);
+        transform: translateY(-10px);
+    }
+
+    100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+    }
+}
+
+@keyframes bounce {
+    0% {
+        -webkit-transform: translateY(-2000px);
+        transform: translateY(-2000px);
+    }
+
+    70% {
+        -webkit-transform: translateY(30px);
+        transform: translateY(30px);
+    }
+
+    90% {
+        -webkit-transform: translateY(-10px);
+        transform: translateY(-10px);
+    }
+
+    100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+    }
+}
+
+.modal-show {
+    display: block;
+    -webkit-animation: bounce 0.6s;
+    animation: bounce 0.6s;
+}
+
+.modal-error {
+    -webkit-animation: shake 0.6s;
+    animation: shake 0.6s;
+}
 
 
 
