--- a/css/style.css
+++ b/css/style.css
@@ -634,6 +634,38 @@ body {
     z-index: 3000;
 }
 
+.pagination {
+    list-style: none;
+    display: flex;
+}
+
+.pagination li {
+    margin-right: 10px;
+}
+
+.pagination-button {
+    border: 4px solid #eeeeee;
+    border-radius: 5px;
+    padding: 11px 16px;
+    background-color: #eeeeee;
+    color: #000;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.pagination-button:hover {
+    background-color: #ffffff;
+}
+
+.pagination-button-next {
+    padding: 11px 80px;
+}
+
+.pagination .pagination-current {
+    background-color: #ffffff;
+}
+
 .product-content {
     position: relative;
     display: flex;
