--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ body {
     min-width: 1200px;
 }
 
+fieldset {
+    border:none;
+}
+
 .visually-hidden {
     position: absolute;
     width: 1px;
